# EasyClock

./: .gitignore  EasyClock.code-workspace  README.md  pyproject.toml  requirements.txt
resources/css/: ListWidget.css  QListWidget.css  QPushButton.css
resources/data/: sentences.json
src/: Funcs.py  Windows.py  installer.nsi  main.py
src/models/: DateAndTime.py  Funcs.py  SMTCSongInfo.py  Settings.py  Types.py  Windows.py
src/ui/: about.ui  mian.ui  settings.ui
